bg img fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
   height: 100vh;
   max-width: 1800px;
   margin: 0 auto;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -157,6 +157,12 @@
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media all and (min-width: 768px) {
+  .paralax {
+    background-attachment: fixed;
+  }
 }
 
 /* tiles & overlays */
